--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,16 @@
 {
   "version": 2,
-  "name":"food-order",
+  "name": "food-order",
   "builds": [
-   {
-    "src": "app.js",
-    "use": "@vercel/node",
-    "config": { "includeFiles": ["dist/**"] }
-   }
+    {
+      "src": "app.js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-   {
-    "src": "/(.*)",
-    "dest": "app.js"
-   }
+    {
+      "src": "/(.*)",
+      "dest": "app.js"
+    }
   ]
- }
+}
